--- a/views/admin/edit_user.ejs
+++ b/views/admin/edit_user.ejs
@@ -108,10 +108,10 @@
                     </div>
                     
                     <div class="mt-8 flex items-center space-x-4">
-                        <button type="submit" class="py-3 px-6 bg-blue-600 hover:bg-blue-700 text-white font-bold rounded-lg text-lg transition duration-200">
+                        <button type="submit" class="w-full sm:w-auto py-3 px-6 bg-blue-600 hover:bg-blue-700 text-white font-bold rounded-lg text-lg transition duration-200">
                             Update User
                         </button>
-                        <a href="/admin/users" class="py-3 px-6 bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold rounded-lg text-lg transition duration-200">
+                        <a href="/admin/users" class="w-full sm:w-auto text-center py-3 px-6 bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold rounded-lg text-lg transition duration-200">
                             Cancel
                         </a>
                     </div>
