--- a/views/admin/manage.ejs
+++ b/views/admin/manage.ejs
@@ -82,7 +82,7 @@
             </form>
         </div>
         
-        <!-- Tool Grid (Link Generator & PDF Uploader) -->
+        <!-- NEW: Tool Grid (Link Generator & PDF Uploader) -->
         <% if (user.is_superadmin || user.can_add) { %>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
             
