--- a/views/admin/history.ejs
+++ b/views/admin/history.ejs
@@ -97,7 +97,7 @@
                                         colorClass = 'bg-green-100 text-green-800';
                                     } else if (log.action_type.includes('LOGIN') || log.action_type.includes('LOGOUT')) {
                                         colorClass = 'bg-blue-100 text-blue-800';
-                                    } else if (log.action_type.includes('EDIT') || log.action_type.includes('DOWNLOAD')) {
+                                    } else if (log.action_type.includes('EDIT') || log.action_type.includes('DOWNLOAD') || log.action_type.includes('GENERATE')) {
                                         colorClass = 'bg-yellow-100 text-yellow-800';
                                     }
                                 %>
